# jack2pcm

./: Makefile  Makefile.in  README  aclocal.m4  configure  configure.in  jack2pcm.1  jack2pcm.c
